Spring Configuration with Java Code

--- a/spring-demo-annotations/src/fortunes.properties
+++ b/spring-demo-annotations/src/fortunes.properties
@@ -1,1 +1,3 @@
 fortunes=try again until you make it ,Be ware of the boogeyman, Not the day to travel man
+sad.fortune=Don't even try today you won't achieve anything
+stupidFortune=Today you will be lucky, but at the end of the day you will die.
