--- a/spring-crm-rest-demo/pom.xml
+++ b/spring-crm-rest-demo/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project 
+	xmlns="http://maven.apache.org/POM/4.0.0" 
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
@@ -8,13 +10,13 @@
 	<packaging>war</packaging>
 
 	<properties>
-		<springframework.version>5.0.6.RELEASE</springframework.version>
-		<hibernate.version>5.4.1.Final</hibernate.version>
-		<mysql.connector.version>5.1.45</mysql.connector.version>
-		<c3po.version>0.9.5.2</c3po.version>
+		<springframework.version>5.2.6.RELEASE</springframework.version>
+		<hibernate.version>5.4.15.Final</hibernate.version>
+		<mysql.connector.version>8.0.20</mysql.connector.version>
+		<c3po.version>0.9.5.5</c3po.version>
 
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>1.9</maven.compiler.source>
+		<maven.compiler.target>1.9</maven.compiler.target>
 	</properties>
 
 	<dependencies>
@@ -42,7 +44,7 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.9.5</version>
+			<version>2.11.0</version>
 		</dependency>
 
 		<!-- Hibernate -->
