--- a/spring-crm-rest-demo/src/main/resources/persistence-mysql.properties
+++ b/spring-crm-rest-demo/src/main/resources/persistence-mysql.properties
@@ -1,9 +1,9 @@
 #
 # JDBC connection properties
 #
-jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/web_customer_tracker?useSSL=false
-jdbc.user=springstudent 
+jdbc.driver=com.mysql.cj.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/web_customer_tracker?useSSL=false&serverTimezone=UTC
+jdbc.user=springstudent
 jdbc.password=springstudent
 #springstudent
 
@@ -20,4 +20,4 @@ connection.pool.maxIdleTime=3000
 #
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.show_sql=true
-hibernate.packagesToScan=com.luv2code.springdemo.entity
+hibernate.packagesToScan=com.silesbonilla.springdemo.entity
