--- a/spring-boot-demo/.project
+++ b/spring-boot-demo/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>mycoolapp</name>
+	<name>spring-boot-demo</name>
 	<comment></comment>
 	<projects>
 	</projects>
