--- a/spring-boot-demo/pom.xml
+++ b/spring-boot-demo/pom.xml
@@ -35,6 +35,26 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		
+		<!-- ADD SUPPORT FOR AUTOMATIC RELOADING -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
+		
+		<!--  ADD SUPPORT FOR SPRING BOOT ACTUATOR -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		
+		<!--  ADD SUPPORT FOR SPRING BOOT SECURITY 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		-->
+		
 	</dependencies>
 
 	<build>
